# chloris-app-sdk

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  development.md  environment.yml  setup.cfg
docs/: chloris_app_sdk.client.md  chloris_app_sdk.md  chloris_app_sdk.utils.md  index.md
src/chloris_app_sdk/: __init__.py  client.py  utils.py
tests/: test_client.py  test_utils.py
tests/test_resources/: test_small_site.geojson  test_small_site2.geojson  test_too_big_site.geojson
