[metadata]
name = chloris_app_sdk
version = 1.0.15
description = A package created with a setuptools tutorial.  See article link for more details.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://app.chloris.earth/docs/index.html


[options]
package_dir=
    =src
packages=find:
install_requires =
    boto3
    urllib3

[options.packages.find]
where=src
install_requires =
    importlib; python_version >= "3.0"
